@@ -1,0 +1,554 @@
+<?xml version="1.0"?>
+<!DOCTYPE LumiRangeCollection SYSTEM "http://atlas-runquery.cern.ch/LumiRangeCollection.dtd">
+<!--This document is created by GoodRunsListWriter.-->
+<?xml-stylesheet type="text/xsl" href="/atlasdqm/grlview/grl.xsl" title="grlview" ?>
+<LumiRangeCollection>
+<NamedLumiRange>
+<Name>PHYS_StandardGRL_All_Good</Name>
+<Version>2.1</Version>
+<Metadata Name="ARQEquivalentQuery">find run data12_8TeV.periodB and dq PHYS_StandardGRL_All_Good DEFECTS#DetStatus-v61-pro16 g</Metadata>
+<Metadata Name="Query">Period: data12_8TeV.B; Defect: PHYS_StandardGRL_All_Good; Defect tag: DetStatus-v61-pro16; Ignoring None</Metadata>
+<Metadata Name="RQTSVNVersion">DQDefects-00-01-00</Metadata>
+<Metadata Name="RunList">202660,202668,202712,202740,202798,202965,202991,203027,203169,203191,203195,203228,203256,203258,203277,203335,203336,203353,203432,203454,203456,203523,203524,203602,203605,203636,203680,203719,203739,203745,203760,203779,203792,203875,203876,203934,204025,204026,204071,204073,204134,204153,204158,204240,204265,204416,204442,204474,204564,204633,204668,204726,204763,204769,204772,204796,204853,204857,204910,204932,204954,204955,204976,205010,205016,205017,205055,205071,205112,205113</Metadata>
+<LumiBlockCollection>
+<Run>202660</Run>
+<LBRange Start="357" End="367"/>
+<LBRange Start="369" End="442"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>202668</Run>
+<LBRange Start="33" End="61"/>
+<LBRange Start="63" End="113"/>
+<LBRange Start="115" End="139"/>
+<LBRange Start="141" End="198"/>
+<LBRange Start="200" End="305"/>
+<LBRange Start="307" End="369"/>
+<LBRange Start="372" End="436"/>
+<LBRange Start="447" End="448"/>
+<LBRange Start="478" End="479"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>202712</Run>
+<LBRange Start="297" End="299"/>
+<LBRange Start="301" End="546"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>202740</Run>
+<LBRange Start="73" End="83"/>
+<LBRange Start="86" End="100"/>
+<LBRange Start="103" End="123"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>202798</Run>
+<LBRange Start="446" End="473"/>
+<LBRange Start="475" End="547"/>
+<LBRange Start="549" End="558"/>
+<LBRange Start="571" End="663"/>
+<LBRange Start="671" End="697"/>
+<LBRange Start="699" End="727"/>
+<LBRange Start="729" End="787"/>
+<LBRange Start="789" End="877"/>
+<LBRange Start="879" End="920"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>202965</Run>
+<LBRange Start="123" End="270"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>202991</Run>
+<LBRange Start="273" End="286"/>
+<LBRange Start="289" End="427"/>
+<LBRange Start="435" End="512"/>
+<LBRange Start="514" End="542"/>
+<LBRange Start="544" End="557"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>203027</Run>
+<LBRange Start="425" End="610"/>
+<LBRange Start="612" End="719"/>
+<LBRange Start="721" End="930"/>
+<LBRange Start="933" End="1025"/>
+<LBRange Start="1027" End="1070"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>203169</Run>
+<LBRange Start="647" End="724"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>203191</Run>
+<LBRange Start="81" End="110"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>203195</Run>
+<LBRange Start="78" End="126"/>
+<LBRange Start="129" End="357"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>203228</Run>
+<LBRange Start="111" End="220"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>203256</Run>
+<LBRange Start="242" End="264"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>203258</Run>
+<LBRange Start="51" End="64"/>
+<LBRange Start="66" End="100"/>
+<LBRange Start="102" End="261"/>
+<LBRange Start="263" End="334"/>
+<LBRange Start="336" End="514"/>
+<LBRange Start="516" End="701"/>
+<LBRange Start="707" End="812"/>
+<LBRange Start="825" End="843"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>203277</Run>
+<LBRange Start="150" End="211"/>
+<LBRange Start="214" End="377"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>203335</Run>
+<LBRange Start="36" End="151"/>
+<LBRange Start="166" End="174"/>
+<LBRange Start="176" End="219"/>
+<LBRange Start="222" End="257"/>
+<LBRange Start="259" End="287"/>
+<LBRange Start="289" End="351"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>203336</Run>
+<LBRange Start="178" End="200"/>
+<LBRange Start="202" End="240"/>
+<LBRange Start="242" End="272"/>
+<LBRange Start="274" End="320"/>
+<LBRange Start="322" End="380"/>
+<LBRange Start="382" End="413"/>
+<LBRange Start="419" End="590"/>
+<LBRange Start="592" End="770"/>
+<LBRange Start="772" End="789"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>203353</Run>
+<LBRange Start="260" End="328"/>
+<LBRange Start="330" End="357"/>
+<LBRange Start="359" End="448"/>
+<LBRange Start="450" End="488"/>
+<LBRange Start="491" End="743"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>203432</Run>
+<LBRange Start="117" End="197"/>
+<LBRange Start="201" End="228"/>
+<LBRange Start="230" End="240"/>
+<LBRange Start="242" End="414"/>
+<LBRange Start="417" End="418"/>
+<LBRange Start="420" End="420"/>
+<LBRange Start="422" End="469"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>203454</Run>
+<LBRange Start="89" End="111"/>
+<LBRange Start="113" End="144"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>203456</Run>
+<LBRange Start="3" End="166"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>203523</Run>
+<LBRange Start="241" End="246"/>
+<LBRange Start="248" End="281"/>
+<LBRange Start="288" End="326"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>203524</Run>
+<LBRange Start="61" End="76"/>
+<LBRange Start="78" End="121"/>
+<LBRange Start="124" End="207"/>
+<LBRange Start="209" End="255"/>
+<LBRange Start="276" End="358"/>
+<LBRange Start="360" End="367"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>203602</Run>
+<LBRange Start="26" End="34"/>
+<LBRange Start="36" End="174"/>
+<LBRange Start="176" End="257"/>
+<LBRange Start="259" End="344"/>
+<LBRange Start="346" End="411"/>
+<LBRange Start="413" End="687"/>
+<LBRange Start="689" End="696"/>
+<LBRange Start="713" End="820"/>
+<LBRange Start="822" End="936"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>203605</Run>
+<LBRange Start="314" End="336"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>203636</Run>
+<LBRange Start="61" End="110"/>
+<LBRange Start="112" End="114"/>
+<LBRange Start="116" End="144"/>
+<LBRange Start="146" End="151"/>
+<LBRange Start="153" End="234"/>
+<LBRange Start="251" End="292"/>
+<LBRange Start="295" End="339"/>
+<LBRange Start="341" End="354"/>
+<LBRange Start="356" End="385"/>
+<LBRange Start="387" End="414"/>
+<LBRange Start="416" End="450"/>
+<LBRange Start="452" End="654"/>
+<LBRange Start="656" End="714"/>
+<LBRange Start="716" End="744"/>
+<LBRange Start="746" End="1052"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>203680</Run>
+<LBRange Start="352" End="571"/>
+<LBRange Start="573" End="601"/>
+<LBRange Start="603" End="689"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>203719</Run>
+<LBRange Start="81" End="219"/>
+<LBRange Start="221" End="246"/>
+<LBRange Start="248" End="265"/>
+<LBRange Start="267" End="302"/>
+<LBRange Start="304" End="347"/>
+<LBRange Start="349" End="415"/>
+<LBRange Start="417" End="534"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>203739</Run>
+<LBRange Start="558" End="661"/>
+<LBRange Start="663" End="781"/>
+<LBRange Start="783" End="960"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>203745</Run>
+<LBRange Start="3" End="153"/>
+<LBRange Start="155" End="160"/>
+<LBRange Start="162" End="174"/>
+<LBRange Start="177" End="250"/>
+<LBRange Start="252" End="363"/>
+<LBRange Start="365" End="453"/>
+<LBRange Start="455" End="543"/>
+<LBRange Start="545" End="693"/>
+<LBRange Start="695" End="695"/>
+<LBRange Start="699" End="760"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>203760</Run>
+<LBRange Start="197" End="224"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>203779</Run>
+<LBRange Start="329" End="330"/>
+<LBRange Start="332" End="524"/>
+<LBRange Start="526" End="554"/>
+<LBRange Start="562" End="689"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>203792</Run>
+<LBRange Start="138" End="150"/>
+<LBRange Start="152" End="159"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>203875</Run>
+<LBRange Start="74" End="76"/>
+<LBRange Start="81" End="130"/>
+<LBRange Start="142" End="151"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>203876</Run>
+<LBRange Start="460" End="527"/>
+<LBRange Start="535" End="606"/>
+<LBRange Start="608" End="629"/>
+<LBRange Start="632" End="687"/>
+<LBRange Start="689" End="780"/>
+<LBRange Start="793" End="818"/>
+<LBRange Start="820" End="890"/>
+<LBRange Start="893" End="1097"/>
+<LBRange Start="1099" End="1109"/>
+<LBRange Start="1111" End="1154"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>203934</Run>
+<LBRange Start="653" End="659"/>
+<LBRange Start="661" End="686"/>
+<LBRange Start="688" End="689"/>
+<LBRange Start="691" End="704"/>
+<LBRange Start="706" End="719"/>
+<LBRange Start="721" End="749"/>
+<LBRange Start="751" End="811"/>
+<LBRange Start="816" End="889"/>
+<LBRange Start="891" End="899"/>
+<LBRange Start="901" End="911"/>
+<LBRange Start="913" End="1049"/>
+<LBRange Start="1051" End="1170"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>204025</Run>
+<LBRange Start="123" End="161"/>
+<LBRange Start="163" End="195"/>
+<LBRange Start="197" End="201"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>204026</Run>
+<LBRange Start="117" End="118"/>
+<LBRange Start="122" End="283"/>
+<LBRange Start="285" End="432"/>
+<LBRange Start="434" End="574"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>204071</Run>
+<LBRange Start="393" End="396"/>
+<LBRange Start="398" End="402"/>
+<LBRange Start="411" End="445"/>
+<LBRange Start="447" End="480"/>
+<LBRange Start="515" End="551"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>204073</Run>
+<LBRange Start="144" End="217"/>
+<LBRange Start="219" End="350"/>
+<LBRange Start="352" End="393"/>
+<LBRange Start="404" End="405"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>204134</Run>
+<LBRange Start="169" End="210"/>
+<LBRange Start="212" End="263"/>
+<LBRange Start="266" End="268"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>204153</Run>
+<LBRange Start="71" End="121"/>
+<LBRange Start="123" End="263"/>
+<LBRange Start="284" End="285"/>
+<LBRange Start="295" End="295"/>
+<LBRange Start="302" End="302"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>204158</Run>
+<LBRange Start="341" End="341"/>
+<LBRange Start="343" End="468"/>
+<LBRange Start="470" End="480"/>
+<LBRange Start="482" End="498"/>
+<LBRange Start="500" End="558"/>
+<LBRange Start="560" End="698"/>
+<LBRange Start="700" End="910"/>
+<LBRange Start="912" End="940"/>
+<LBRange Start="942" End="952"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>204240</Run>
+<LBRange Start="589" End="612"/>
+<LBRange Start="614" End="624"/>
+<LBRange Start="629" End="630"/>
+<LBRange Start="632" End="677"/>
+<LBRange Start="679" End="709"/>
+<LBRange Start="713" End="857"/>
+<LBRange Start="859" End="1037"/>
+<LBRange Start="1039" End="1120"/>
+<LBRange Start="1122" End="1447"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>204265</Run>
+<LBRange Start="134" End="316"/>
+<LBRange Start="318" End="327"/>
+<LBRange Start="329" End="436"/>
+<LBRange Start="439" End="826"/>
+<LBRange Start="828" End="916"/>
+<LBRange Start="918" End="1276"/>
+<LBRange Start="1278" End="1339"/>
+<LBRange Start="1342" End="1580"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>204416</Run>
+<LBRange Start="15" End="34"/>
+<LBRange Start="36" End="71"/>
+<LBRange Start="76" End="306"/>
+<LBRange Start="308" End="313"/>
+<LBRange Start="315" End="323"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>204442</Run>
+<LBRange Start="177" End="220"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>204474</Run>
+<LBRange Start="220" End="248"/>
+<LBRange Start="250" End="301"/>
+<LBRange Start="303" End="409"/>
+<LBRange Start="411" End="440"/>
+<LBRange Start="460" End="581"/>
+<LBRange Start="584" End="687"/>
+<LBRange Start="702" End="775"/>
+<LBRange Start="777" End="781"/>
+<LBRange Start="783" End="843"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>204564</Run>
+<LBRange Start="587" End="612"/>
+<LBRange Start="614" End="690"/>
+<LBRange Start="692" End="750"/>
+<LBRange Start="752" End="969"/>
+<LBRange Start="971" End="1011"/>
+<LBRange Start="1013" End="1200"/>
+<LBRange Start="1202" End="1410"/>
+<LBRange Start="1412" End="1475"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>204633</Run>
+<LBRange Start="158" End="280"/>
+<LBRange Start="282" End="327"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>204668</Run>
+<LBRange Start="29" End="308"/>
+<LBRange Start="310" End="420"/>
+<LBRange Start="434" End="454"/>
+<LBRange Start="456" End="460"/>
+<LBRange Start="462" End="507"/>
+<LBRange Start="509" End="634"/>
+<LBRange Start="636" End="695"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>204726</Run>
+<LBRange Start="136" End="138"/>
+<LBRange Start="140" End="201"/>
+<LBRange Start="203" End="237"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>204763</Run>
+<LBRange Start="60" End="135"/>
+<LBRange Start="137" End="174"/>
+<LBRange Start="177" End="188"/>
+<LBRange Start="190" End="304"/>
+<LBRange Start="306" End="436"/>
+<LBRange Start="442" End="514"/>
+<LBRange Start="516" End="814"/>
+<LBRange Start="816" End="1015"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>204769</Run>
+<LBRange Start="113" End="298"/>
+<LBRange Start="300" End="517"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>204772</Run>
+<LBRange Start="3" End="216"/>
+<LBRange Start="219" End="231"/>
+<LBRange Start="233" End="291"/>
+<LBRange Start="293" End="499"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>204796</Run>
+<LBRange Start="93" End="121"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>204853</Run>
+<LBRange Start="49" End="65"/>
+<LBRange Start="72" End="89"/>
+<LBRange Start="92" End="209"/>
+<LBRange Start="211" End="214"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>204857</Run>
+<LBRange Start="126" End="194"/>
+<LBRange Start="196" End="200"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>204910</Run>
+<LBRange Start="302" End="449"/>
+<LBRange Start="456" End="502"/>
+<LBRange Start="504" End="715"/>
+<LBRange Start="717" End="745"/>
+<LBRange Start="747" End="749"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>204932</Run>
+<LBRange Start="92" End="138"/>
+<LBRange Start="140" End="173"/>
+<LBRange Start="175" End="203"/>
+<LBRange Start="205" End="244"/>
+<LBRange Start="247" End="345"/>
+<LBRange Start="347" End="455"/>
+<LBRange Start="457" End="605"/>
+<LBRange Start="607" End="634"/>
+<LBRange Start="636" End="648"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>204954</Run>
+<LBRange Start="87" End="137"/>
+<LBRange Start="140" End="249"/>
+<LBRange Start="251" End="252"/>
+<LBRange Start="254" End="324"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>204955</Run>
+<LBRange Start="3" End="269"/>
+<LBRange Start="271" End="365"/>
+<LBRange Start="387" End="466"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>204976</Run>
+<LBRange Start="123" End="331"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>205010</Run>
+<LBRange Start="78" End="186"/>
+<LBRange Start="189" End="198"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>205016</Run>
+<LBRange Start="3" End="229"/>
+<LBRange Start="231" End="259"/>
+<LBRange Start="261" End="261"/>
+<LBRange Start="263" End="321"/>
+<LBRange Start="323" End="365"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>205017</Run>
+<LBRange Start="3" End="407"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>205055</Run>
+<LBRange Start="301" End="302"/>
+<LBRange Start="323" End="635"/>
+<LBRange Start="637" End="1216"/>
+<LBRange Start="1228" End="1246"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>205071</Run>
+<LBRange Start="224" End="249"/>
+<LBRange Start="251" End="353"/>
+<LBRange Start="355" End="380"/>
+<LBRange Start="382" End="400"/>
+<LBRange Start="402" End="646"/>
+<LBRange Start="650" End="828"/>
+<LBRange Start="830" End="968"/>
+<LBRange Start="976" End="979"/>
+<LBRange Start="982" End="1036"/>
+<LBRange Start="1038" End="1090"/>
+<LBRange Start="1092" End="1142"/>
+<LBRange Start="1144" End="1156"/>
+<LBRange Start="1161" End="1246"/>
+<LBRange Start="1248" End="1313"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>205112</Run>
+<LBRange Start="264" End="480"/>
+</LumiBlockCollection>
+<LumiBlockCollection>
+<Run>205113</Run>
+<LBRange Start="591" End="595"/>
+<LBRange Start="616" End="673"/>
+<LBRange Start="675" End="700"/>
+<LBRange Start="702" End="745"/>
+</LumiBlockCollection>
+</NamedLumiRange>
+</LumiRangeCollection>
