@@ -1,7 +1,11 @@
+2014-11-19 Martin <tripiana@cern.ch>
+	* Fix PURW_Folder check
+	* Add share/GRL/ and share/PURW/
+
 2014-11-18 Arely <arelycg@cern.ch>
 	* Add script dq2get.sh to download files from the grid
         * Silvia updated tadd.cxx to compute w (1/<w>) in the merging.
-        * Correct the path to the 'default location' for the pileup files. 
+        * Correct the path to the 'default location' for the pileup files.
 
 2014-11-10 Martin <tripiana@cern.ch>
 	* Add -u option to generate pile-up root files.
